--- a/css/layout/_grid.css
+++ b/css/layout/_grid.css
@@ -5,15 +5,9 @@
     border: 1px solid red;
 }
 
-#bakery, #production, #store {
-    padding-top: 15px;
-    height: 100vh;
-    text-align: center;
-}
-
 .separator {
     background-image: url(/assets/images/panel-vertical.png);
     height: 100vh;
     width: 16px;
-    background-color: #205678;
+    background-color: brown;
 }
