--- a/css/layout/_sectionStore.css
+++ b/css/layout/_sectionStore.css
@@ -2,5 +2,31 @@
     border: 1px solid yellow;
     min-width: 150px;
     max-width: 300px;
+    padding-top: 15px;
+    height: 100vh;
     flex: 3;
+    text-align: center;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: green;
+    background: radial-gradient(circle, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.9));
+}
+
+#buildings {
+    background-image: url(/assets/images/panel-horizontal.png);
+    margin-top: 15px;
+    min-height: 16px;
+}
+
+#buildings:hover::before {
+    display: flex;
+    justify-content: flex-start;
+    align-items: space-around;
+    content: 'Buildings';
+    font-size: 11px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-shadow: 0px 0px 4px #000000;
+    text-shadow: 0px 1px 4px #000000;
+    transition: 3s ease;
 }
