--- a/css/base/_fonts.css
+++ b/css/base/_fonts.css
@@ -1,22 +1,22 @@
 @font-face {
-    font-family: 'Merriweather', serif;
+    font-family: 'Merriweather';
     src: url(/assets/fonts/merriweather/merriweather-regular.ttf);
 }
 
 @font-face {
-    font-family: 'Merriweather', serif;
+    font-family: 'Merriweather-italic';
     src: url(/assets/fonts/merriweather/merriweather-italic.ttf);
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Merriweather', serif;
+    font-family: 'Merriweather-bold';
     src: url(/assets/fonts/merriweather/merriweather-bold.ttf);
     font-weight: bold;
 }
 
 @font-face {
-    font-family: 'Merriweather', serif;
+    font-family: 'Merriweather-italic-bold';
     src: url(/assets/fonts/merriweather/merriweather-bolditalic.ttf);
     font-weight: bold;
     font-style: italic;
