--- a/css/base/_typography.css
+++ b/css/base/_typography.css
@@ -1,5 +1,10 @@
+html {
+    font-family: 'Merriweather';
+    font-size: 16px;
+}
+
 #game {
-    font-family: 'Merriweather', serif;
+    font-family: 'Merriweather';
     font-size: 16px;
     color: white;
     user-select: none;
