--- a/css/layout/_sectionStore.css
+++ b/css/layout/_sectionStore.css
@@ -13,48 +13,68 @@
 }
 
 /* le séparateur avec le texte BUILDINGS */
-#buildings::before {
+#buildings {
     background-image: url(/assets/images/panel-horizontal.png);
     margin-top: 15px;
-    min-height: 16px;
-    content: '';
-    display: block;
+    padding-top: 16px;
+    height: 16px;
+    border: none;
+    display: flex;
+    flex-direction: column;
 }
 
-#buildings:hover::before {
-    display: block;
-    text-align: left;
-    /* display: flex;
-    justify-content: flex-start;
-    align-items: space-around; */
+#buildings::before {
+    text-align: center;
     content: 'Buildings';
+    position: absolute;
+    padding: 1px 10px;
+    border: none;
+    opacity: 0;
     font-size: 11px;
     font-weight: bold;
     text-transform: uppercase;
-    text-shadow: 0px 0px 4px #000000;
-    text-shadow: 0px 1px 4px #000000;
-    /* transition: 3s ease; */
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 1), 0px 1px 4px rgba(0, 0, 0, 1);
+    margin-top: -15px;
+
+}
+
+#buildings:hover::before {
+    opacity: 1;
+    transition: 0.75s;
 }
 
 /*les tuiles*/
-/*les tuiles unlocked*/
-#buildings ~ div {
+/*les tuiles version unlocked = visible*/
+#buildings > div {
     position: relative;
-    background-image: url(/assets/images/store-tile.jpg);
+    content: '';
+    display: flex;
+    flex-direction: column;
+    height: 20vh;
     cursor: pointer;
-    height: 25vh;
-    z-index: 0;
-    border: 1px solid red;
+    background-image: url(/assets/images/store-tile.jpg);
 }
 
-/*les tuiles locked*/
-#buildings ~ div .icon {
+#buildings > div::after  {
+    display: flex;
+    content: '';
+    opacity: 1;
+    height: 8vh;
+}
+
+#buildings > div:hover {
+    box-shadow: inset 0px 0px 15px 3px #ffffff;
+    transition: 0.75s;
+}
+
+/* le contenu des tuiles */
+/* les icones des tuiles */
+#buildings > div .icon {
     position: absolute;
     background-image: url(/assets/images/buildings.png);
-    background-position-x: 35%;
-    height: 25vh;
+    background-position-x: 0;
+    height: 18vh;
     width: 5vw;
-    border: 1px solid blue;
     z-index: 1;
 }
 
@@ -62,12 +82,59 @@
     background-position-y: 6%;
 }
 
+/* le nom & coût */
+.cost {
+    position: absolute;
+    background-image: url(/assets/images/money.png);
+    background-repeat: no-repeat;
+    font-size: 0.7rem;
+    color: #66ff66;
+    z-index: 1;
+    bottom : 0;
+    margin-top: 5px;
+    margin-left: 70px;
+    padding-left: 20px;
+    padding-bottom: 12px;
+}
 
-.disabled .cost {
-    color: #ff6666;
+.name {
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-shadow: 0px 0px 4px #000000, 0px 1px 4px #000000;
+    margin-left: 70px;
+    margin-top: 8px;
+    text-align: left;
+}
+
+/* état tuile .disabled: avec fond sombre */
+#buildings > .disabled {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 20vh;
+    cursor: pointer;
+    background-image: url(/assets/images/store-tile.jpg);
+    background-color: black;
+    opacity: 50%;
+}
+
+#buildings > .disabled::after  {
+    display: flex;
+    content: '';
+    opacity: 1;
+    height: 8vh;
+}
+
+#buildings > .disabled .icon {
+    position: absolute;
+    background-image: url(/assets/images/buildings.png);
+    background-position-x: 35%;
+    height: 18vh;
+    width: 5vw;
+    border: 1px solid blue;
     z-index: 1;
 }
 
-#buildings ~ div::before {
-    opacity: 70%;
+.disabled .cost {
+    color: #ff6666;
 }
