start with first two buildings then show other ones

--- a/css/layout/_sectionStore.css
+++ b/css/layout/_sectionStore.css
@@ -124,7 +124,7 @@
 
 /*** MODE LOCKED ***/
 /* TUILE LOCKED : sombres */
-.locked {
+.disabled {
     background-color: black;
     opacity: 50%;
 }
