--- a/css/layout/_sectionStore.css
+++ b/css/layout/_sectionStore.css
@@ -122,6 +122,21 @@
     text-align: left;
 }
 
+/* NUMBER PAR DEFAUT */
+.number {
+    position: absolute;
+    margin-left: 240px;
+    margin-top: 5px;
+    font-size: 2.5rem;
+    width: 10vh;
+    color: transparent;
+    background: #000000cf;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+}
+
 /*** MODE LOCKED ***/
 /* TUILE LOCKED : sombres */
 .disabled {
