ajout methode buyBuilding & affichage dynamique nb & cout batiment + stock cookies

--- a/css/layout/_sectionStore.css
+++ b/css/layout/_sectionStore.css
@@ -124,6 +124,7 @@
 
 /* NUMBER PAR DEFAUT */
 .number {
+    display: none;
     position: absolute;
     margin-left: 240px;
     margin-top: 5px;
